# dbms-project

./: Cargo.toml  Explanation.md  IceWeave_Project_Report_Updated.docx  IceWeave_V2_Project_Report.md  IceWeave_V3_Project_Report.md  IceWeave_V4_Project_Report.md  README.md  docker-compose.yml  implementation_plan.md  index.html
data/: categories.csv  locations.csv  products.csv  users.csv
init-scripts/: mongo.js  postgres.sql
src/: main.rs
src/adapters/: mod.rs  mongodb.rs  postgres.rs  rest.rs  s3.rs
