[package]
name = "iceweave"
version = "0.1.0"
edition = "2024"

[dependencies]
arrow = "58.0.0"
async-trait = "0.1.89"
axum = "0.8.8"
datafusion = "52.2.0"
futures = "0.3.32"
futures-util = "0.3.32"
mongodb = { version = "3.5.1", features = ["bson-3"] }
object_store = "0.12.5"
reqwest = { version = "0.13.2", features = ["json"] }
rust_decimal = "1.40.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-native-tls", "rust_decimal"] }
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros", "full"] }
tower-http = { version = "0.6.8", features = ["fs", "cors"] }
url = "2.5.8"
